-
Bug
-
Resolution: Done
-
P1: Critical
-
5.5.0
-
None
-
d1b20513798ed441afddb87fd4e7facce78349e1
The following code prints valid properties like en_US with 5.4.1 and undefined with 5.5.0:
import QtQuick 2.2 import QtQuick.Window 2.0 Window { id: window visible: true width: 800 height: 600 Component.onCompleted: { print(Qt.inputMethod.locale.amText); print(Qt.inputMethod.locale.decimalPoint); print(Qt.inputMethod.locale.exponential); print(Qt.inputMethod.locale.firstDayOfWeek); print(Qt.inputMethod.locale.groupSeparator); print(Qt.inputMethod.locale.measurementSystem); print(Qt.inputMethod.locale.name); print(Qt.inputMethod.locale.nativeCountryName); print(Qt.inputMethod.locale.nativeLanguageName); print(Qt.inputMethod.locale.negativeSign); print(Qt.inputMethod.locale.percent); print(Qt.inputMethod.locale.pmText); print(Qt.inputMethod.locale.positiveSign); print(Qt.inputMethod.locale.textDirection); print(Qt.inputMethod.locale.uiLanguages); print(Qt.inputMethod.locale.weekDays); print(Qt.inputMethod.locale.zeroDigit); } }
The non-QML equivalent works fine:
#include <QtGui> int main(int argc, char *argv[]) { QGuiApplication a(argc, argv); qDebug() << a.inputMethod()->locale().name(); return a.exec(); }
For Gerrit Dashboard: QTBUG-47916 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
124198,7 | Don't consider QLocale a value type. | 5.5 | qt/qtdeclarative | Status: MERGED | +2 | 0 |