src/qml/qml/qqmlvaluetype.cpp
@@ -82,7 +82,8 @@ bool QQmlValueTypeFactoryImpl::isValueType(int idx)
             && idx != QVariant::StringList
             && idx != QMetaType::QObjectStar
             && idx != QMetaType::VoidStar
-            && idx != QMetaType::QVariant) {
+            && idx != QMetaType::QVariant
+            && idx != QMetaType::QLocale) {
         return true;
     }
 
